--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/crypto-js": "^4.0.1",
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "crypto-js": "^4.0.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
