--- a/package.json
+++ b/package.json
@@ -1,46 +1,45 @@
 {
-  "name": "interactive-kiosk",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "electron:build": "vue-cli-service electron:build",
-    "electron:serve": "vue-cli-service electron:serve",
-    "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
-  },
-  "main": "background.js",
-  "dependencies": {
-    "@iconify/iconify": "^1.0.7",
-    "@types/axios": "^0.14.0",
-    "@types/crypto-js": "^4.0.1",
-    "@types/dom-mediacapture-record": "^1.0.7",
-    "axios": "^0.21.0",
-    "core-js": "^3.6.5",
-    "crypto-js": "^4.0.0",
-    "register-service-worker": "^1.7.1",
-    "vue": "^2.6.11",
-    "vue-class-component": "^7.2.3",
-    "vue-material": "^1.0.0-beta-15",
-    "vue-property-decorator": "^8.4.2",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
-  },
-  "devDependencies": {
-    "@types/electron-devtools-installer": "^2.2.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-pwa": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "electron": "^9.0.0",
-    "electron-devtools-installer": "^3.1.0",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.2",
-    "typescript": "~3.9.3",
-    "vue-cli-plugin-electron-builder": "~2.0.0-rc.5",
-    "vue-template-compiler": "^2.6.11"
-  }
+	"name": "interactive-kiosk",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"serve": "vue-cli-service serve",
+		"build": "vue-cli-service build",
+		"electron:build": "vue-cli-service electron:build",
+		"electron:serve": "vue-cli-service electron:serve"
+	},
+	"main": "background.js",
+	"dependencies": {
+		"@iconify/iconify": "^1.0.7",
+		"@material/button": "^8.0.0",
+		"@material/ripple": "^8.0.0",
+		"axios": "^0.21.0",
+		"core-js": "^3.6.5",
+		"crypto-js": "^4.0.0",
+		"register-service-worker": "^1.7.1",
+		"vue": "^2.6.11",
+		"vue-class-component": "^7.2.3",
+		"vue-property-decorator": "^8.4.2",
+		"vue-router": "^3.2.0",
+		"vuex": "^3.4.0"
+	},
+	"devDependencies": {
+		"@types/axios": "^0.14.0",
+		"@types/crypto-js": "^4.0.1",
+		"@types/dom-mediacapture-record": "^1.0.7",
+		"@types/electron-devtools-installer": "^2.2.0",
+		"@vue/cli-plugin-babel": "~4.5.0",
+		"@vue/cli-plugin-pwa": "~4.5.0",
+		"@vue/cli-plugin-router": "~4.5.0",
+		"@vue/cli-plugin-typescript": "~4.5.0",
+		"@vue/cli-plugin-vuex": "~4.5.0",
+		"@vue/cli-service": "~4.5.0",
+		"electron": "^9.0.0",
+		"electron-devtools-installer": "^3.1.0",
+		"node-sass": "^4.12.0",
+		"sass-loader": "^8.0.2",
+		"typescript": "~3.9.3",
+		"vue-cli-plugin-electron-builder": "~2.0.0-rc.5",
+		"vue-template-compiler": "^2.6.11"
+	}
 }
