--- a/public/manifest.json
+++ b/public/manifest.json
@@ -41,5 +41,5 @@
 	"start_url": "/",
 	"display": "standalone",
 	"background_color": "#ffffff",
-	"theme_color": "#F6CB4C"
+	"theme_color": "#538fff"
 }
