--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -2,22 +2,21 @@
 # https://github.com/firebase/firebase-tools
 
 name: Deploy to Firebase Hosting on merge
-"on":
-    push:
-        branches:
-            - master
+'on':
+  push:
+    branches:
+      - main
 jobs:
-    build_and_deploy:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v2
-            - run: npm i
-            - run: npm run build
-            - uses: FirebaseExtended/action-hosting-deploy@v0
-              with:
-                  repoToken: "${{ secrets.GITHUB_TOKEN }}"
-                  firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_INTERACTIVE_KIOSK }}"
-                  channelId: live
-                  projectId: interactive-kiosk
-              env:
-                  FIREBASE_CLI_PREVIEWS: hostingchannels
+  build_and_deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - run: npm i && npm run build
+      - uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_INTERACTIVE_KIOSK }}'
+          channelId: live
+          projectId: interactive-kiosk
+        env:
+          FIREBASE_CLI_PREVIEWS: hostingchannels
