--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
 		"serve": "vue-cli-service serve",
 		"build": "vue-cli-service build",
 		"electron:build": "vue-cli-service electron:build",
-		"electron:serve": "vue-cli-service electron:serve",
-		"postinstall": "electron-builder install-app-deps",
-		"postuninstall": "electron-builder install-app-deps"
+		"electron:serve": "vue-cli-service electron:serve"
 	},
 	"main": "background.js",
 	"dependencies": {
@@ -16,6 +14,7 @@
 		"axios": "^0.21.0",
 		"core-js": "^3.6.5",
 		"crypto-js": "^4.0.0",
+		"firebase": "^8.1.2",
 		"register-service-worker": "^1.7.1",
 		"vue": "^2.6.11",
 		"vue-class-component": "^7.2.3",
@@ -24,7 +23,8 @@
 		"vue-router": "^3.2.0",
 		"vuex": "^3.4.0",
 		"vuex-class": "^0.3.2",
-		"vuex-module-decorators": "^1.0.1"
+		"vuex-module-decorators": "^1.0.1",
+		"vuexfire": "^3.2.4"
 	},
 	"devDependencies": {
 		"@types/electron-devtools-installer": "^2.2.0",
