--- a/public/manifest.json
+++ b/public/manifest.json
@@ -41,5 +41,5 @@
 	"start_url": "/",
 	"display": "standalone",
 	"background_color": "#ffffff",
-	"theme_color": "#538fff"
+	"theme_color": "#1c1b29"
 }
