--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"main": "background.js",
 	"dependencies": {
+		"@firebase/messaging": "^0.7.3",
 		"@iconify/iconify": "^1.0.7",
 		"axios": "^0.21.0",
 		"core-js": "^3.6.5",
