--- a/package.json
+++ b/package.json
@@ -1,49 +1,49 @@
 {
-	"name": "interactive-kiosk",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"serve": "vue-cli-service serve",
-		"build": "vue-cli-service build",
-		"electron:build": "vue-cli-service electron:build",
-		"electron:serve": "vue-cli-service electron:serve"
-	},
-	"main": "background.js",
-	"dependencies": {
-		"@firebase/messaging": "^0.7.3",
-		"@iconify/iconify": "^1.0.7",
-		"axios": "^0.21.0",
-		"core-js": "^3.6.5",
-		"crypto-js": "^4.0.0",
-		"firebase": "^8.1.2",
-		"register-service-worker": "^1.7.1",
-		"vue": "^2.6.11",
-		"vue-class-component": "^7.2.3",
-		"vue-material": "^1.0.0-beta-15",
-		"vue-property-decorator": "^8.4.2",
-		"vue-router": "^3.2.0",
-		"vuex": "^3.4.0",
-		"vuex-class": "^0.3.2",
-		"vuex-module-decorators": "^1.0.1",
-		"vuexfire": "^3.2.4"
-	},
-	"devDependencies": {
-		"@types/electron-devtools-installer": "^2.2.0",
-		"@vue/cli-plugin-babel": "~4.5.0",
-		"@vue/cli-plugin-pwa": "~4.5.0",
-		"@vue/cli-plugin-router": "~4.5.0",
-		"@vue/cli-plugin-typescript": "~4.5.0",
-		"@vue/cli-plugin-vuex": "~4.5.0",
-		"@vue/cli-service": "~4.5.0",
-		"@types/axios": "^0.14.0",
-		"@types/crypto-js": "^4.0.1",
-		"@types/dom-mediacapture-record": "^1.0.7",
-		"electron": "^9.0.0",
-		"electron-devtools-installer": "^3.1.0",
-		"node-sass": "^4.12.0",
-		"sass-loader": "^8.0.2",
-		"typescript": "~3.9.3",
-		"vue-cli-plugin-electron-builder": "~2.0.0-rc.5",
-		"vue-template-compiler": "^2.6.11"
-	}
+  "name": "interactive-kiosk",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "electron:build": "vue-cli-service electron:build",
+    "electron:serve": "vue-cli-service electron:serve"
+  },
+  "main": "background.js",
+  "dependencies": {
+    "@firebase/messaging": "^0.7.3",
+    "@iconify/iconify": "^2.2.1",
+    "axios": "^0.27.2",
+    "core-js": "^3.6.5",
+    "crypto-js": "^4.0.0",
+    "firebase": "^8.1.2",
+    "register-service-worker": "^1.7.1",
+    "vue": "^2.6.14",
+    "vue-class-component": "^7.2.6",
+    "vue-material": "^1.0.0-beta-15",
+    "vue-property-decorator": "^8.5.1",
+    "vue-router": "^3.2.0",
+    "vuex": "^3.4.0",
+    "vuex-class": "^0.3.2",
+    "vuex-module-decorators": "^1.0.1",
+    "vuexfire": "^3.2.5"
+  },
+  "devDependencies": {
+    "@types/crypto-js": "^4.0.1",
+    "@types/dom-mediacapture-record": "^1.0.11",
+    "@types/electron-devtools-installer": "^2.2.2",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-pwa": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-typescript": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "builder-util": "^23.0.8",
+    "electron": "^18.2.0",
+    "electron-devtools-installer": "^3.2.0",
+    "sass": "^1.51.0",
+    "sass-loader": "^8.0.2",
+    "typescript": "^4.6.4",
+    "vue-cli-plugin-electron-builder": "~2.0.0-rc.5",
+    "vue-template-compiler": "^2.6.14"
+  }
 }
